--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>XY.Inc</groupId>
-	<artifactId>POI</artifactId>
+	<groupId>br.com.xy.inc</groupId>
+	<artifactId>poi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>POI</name>
+	<name>poi</name>
 	<description>Desafio Back-end Pl</description>
 
 	<properties>
