--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+server.port=8080
+
 #DataSource
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:pois
-spring.datasource.username-sa
+spring.datasource.username=sa
 spring.datasource.password=
 
 #JPA
