Configurado perfil test com H2 e local com Postgre

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,5 @@
 server.port=8080
-
-#DataSource
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:pois
-spring.datasource.username=sa
-spring.datasource.password=
-
-#JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-
-#h2
-spring.h2.console.enable=true
-spring.h2console.path=/h2-console
+spring.application.name=PoiApplication
+spring.jpa.generate-ddl=false
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
