Implementação BFF/endopoint busca por ID e correção bugs nos testes unitários

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,6 +5,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:pois
 spring.datasource.username=sa
 spring.datasource.password=
-
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master-test.yaml
 #spring.h2.console.enable=true
 #spring.h2console.path=/h2-console
