--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,3 +5,4 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
