Implementação Mocktests refatoração handle exception

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,7 @@
+server.port=8080
+spring.application.name=PoiApplication
+spring.jpa.generate-ddl=false
+spring.liquibase.enabled=true
 #PostgreSQL
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
