--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,7 @@
+server.port=8080
+spring.application.name=PoiApplication
+spring.jpa.generate-ddl=false
+spring.liquibase.enabled=true
 #H2
 spring.jpa.database=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
